--- a/aboutus.css
+++ b/aboutus.css
@@ -124,7 +124,7 @@ body {
       rgba(255, 255, 255, 0),
       var(--primary-color)
     ),
-    url("project/nongjrong.jpg");
+    url("nongjrong.jpg");
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
@@ -460,3 +460,4 @@ nav {
     grid-template-columns: 2fr 1fr 1fr;
   }
 }
+
